--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -58,7 +58,7 @@
 					<img src="<%=result.post[i].url_image%>" class="rounded  w-32 h-32">
 				</div>
 				<div class="flex flex-col md:flex-row">
-					<div class="flex flex-col h-full justify-around pl-4 mb-2">
+					<div class="flex flex-col h-full justify-around pl-4 mb-2 w-1/3">
 						<div class="texto-white">
 							<b>Work: </b><a href="/post/<%=result.post[i].id_posts%>/" class="hover-red duration-1000 p-0"><%=result.post[i].title%></a>
 						</div>
@@ -69,7 +69,7 @@
 							<p><b>Creation Date: </b><%=result.post[i].creation_date%></p>
 						</div>
 					</div>
-					<div class="texto-white flex flex-col h-full justify-around pl-4 mb-2">
+					<div class="texto-white flex flex-col h-full justify-around pl-4 mb-2 w-1/3">
 						<div>
 							<p><b>Number of Words: </b><%=result.post[i].number_words%></p>	
 						</div>
@@ -80,7 +80,7 @@
 							<p><b>Last Activity: </b><%= result.post[i].activity %></p>
 						</div>
 					</div>
-					<div class="texto-white flex flex-col w-full md:w-1/3 h-full justify-around pl-4 mb-2">
+					<div class="texto-white flex flex-col w-full md:w-1/3 h-full justify-around pl-4 mb-2 w-1/3">
 						<div class="">
 							<p><b>Preview: </b><i>"..<%=result.post[i].content_post%>.."</i></p>
 						</div>
