--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -54,33 +54,36 @@
 			<%if(color == 0){color = 1; %>fondo-black<% }
 			else{color = 0; %>fondo-gray<% }%>
 			 borde-red my-0 pl-10">
-				<div class="justify-center items-center flex">
+				<div class="flex justify-center items-center w-32">
 					<img src="<%=result.post[i].url_image%>" class="rounded  w-32 h-32">
 				</div>
-				<div class="flex flex-col md:flex-row">
-					<div class="flex flex-col h-full justify-around pl-4 mb-2 w-1/3">
-						<div class="texto-white">
-							<b>Work: </b><a href="/post/<%=result.post[i].id_posts%>/" class="hover-red duration-1000 p-0"><%=result.post[i].title%></a>
+				<div class="flex flex-col md:flex-row justify-evenly w-full pr-4">
+					<div class="flex flex-col h-full justify-evenly pl-4 mb-2 md:w-1/3">
+						<div class="texto-white text-xl">
+							<b><a href="/post/<%=result.post[i].id_posts%>/" class="hover-red duration-1000 p-0"><%=result.post[i].title%></a></b>
 						</div>
 						<div class="texto-white">
 							<p><b>Review Author: </b><%=result.post[i].username%></p>
 						</div>
 						<div class="texto-white">
-							<p><b>Creation Date: </b><%=result.post[i].creation_date%></p>
+							<p><b><%=result.post[i].genre%></b></p>
 						</div>
 					</div>
-					<div class="texto-white flex flex-col h-full justify-around pl-4 mb-2 w-1/3">
+					<div class="texto-white flex flex-col h-full justify-around pl-4 mb-2 md:w-1/3">
 						<div>
 							<p><b>Number of Words: </b><%=result.post[i].number_words%></p>	
 						</div>
 						<div>
 							<p><b>Replies: </b><%= result.post[i].replies %></p>
 						</div>
+						<div class="texto-white">
+							<p><b>Creation: </b><%=result.post[i].creation_date%></p>
+						</div>
 						<div>
-							<p><b>Last Activity: </b><%= result.post[i].activity %></p>
+							<p><b>Activity: </b><%= result.post[i].activity %></p>
 						</div>
 					</div>
-					<div class="texto-white flex flex-col w-full md:w-1/3 h-full justify-around pl-4 mb-2 w-1/3">
+					<div class="texto-white flex flex-col w-full md:w-1/3 h-full justify-evenly pl-4 mb-2">
 						<div class="">
 							<p><b>Preview: </b><i>"..<%=result.post[i].content_post%>.."</i></p>
 						</div>
