--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,9 +14,12 @@
 <body>
   <%- include('./nav.ejs') %>
   <div class="container-body relative z-10 flex flex-col">
+
     <div class="">
       <img class="" src="/images/book-home.png">
+      <h1 class="text-9xl">Book Lovers</h1>
     </div>
+
     <div class="fondo-black flex flex-col w-full justify-center items-center my-2">
       <p class="texto-white">Introduccion al sitio titulo</p>
       <p class="texto-white">Introduccion al sitio content</p> 
