--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -29,22 +29,22 @@
   md:py-0 py-4 md:pl-0 pl-7 top-[-400px] md:top-[0]
   transition-all ease-in duration-500"> 
     <li class="mx-4 my-6 md:my-0 md:mx-0">
-      <a href="/home" class="text-xl hover-red">Home</a>
+      <a href="/home" class="text-xl hover-red duration-1000">Home</a>
     </li>
     <li class="mx-4 my-6 md:my-0 md:mx-0">
-      <a href="/forum" class="text-xl hover-red">Forum</a>
+      <a href="/forum" class="text-xl hover-red duration-1000">Forum</a>
     </li>
     <li class="mx-4 my-6 md:my-0 md:mx-0">
-      <a href="/about" class="text-xl hover-red">About</a>
+      <a href="/about" class="text-xl hover-red duration-1000">About</a>
     </li>
     <li class="inline-block mx-4 md:my-0 md:mx-0">
       <%if (result.session.username == "") { %>
-        <a href="/login" class="text-xl hover-red pr-0">Sign in</a>
+        <a href="/login" class="text-xl hover-red duration-1000 pr-0">Sign in</a>
         <a class="text-xl p-0">/</a>
-        <a href="/login" class="text-xl hover-red pl-0">Sign Up</a>
+        <a href="/login" class="text-xl hover-red duration-1000 pl-0">Sign Up</a>
         <% }else{ %>
-            <a class="text-xl">Welcome, </a><a href="/user" class="hover-red text-xl pl-0"><%= result.session.username%></a>
-          <li class="inline-block md:my-0 md:mx-0 hover-red"><a href="/signOut" class="text-xl"><i class="fa-solid fa-right-from-bracket"></i></a></li> 
+            <a class="text-xl pr-0.5">Welcome, </a><a href="/user" class="hover-red duration-1000 text-xl pl-0"><%= result.session.username%></a>
+          <li class="inline-block md:my-0 md:mx-0 hover-red duration-1000"><a href="/signOut" class="text-xl"><i class="fa-solid fa-right-from-bracket"></i></a></li> 
             <%}%>
     </li>
     
