--- a/views/showgen.ejs
+++ b/views/showgen.ejs
@@ -17,17 +17,22 @@
 	<p class="text-2xl"> books of the genre :<span class="texto-red "><%=result.genres[0].name%></span></p>
 	<br>
 	<table></table>
-	<section class="flex-container"> 
+	<div class="flex flex-col texto-white m-3">
 		<%for (var i = 0 ; i < result.posts.length; i++) { %>
 			<div class="flex flex-row fondo-black borde-red border-2 rounded w-full p-3">
-				<img src="<%=result.posts[i].id_posts%>">
-				<a class="hover-red" href="/post/<%=result.posts[i].id_posts%>/"><%=result.posts[i].title%></a> Author<%=result.posts[i].username%>	
+				<div class="mr-2 borde-white border-2">
+				<img class="rounded w-20 h-20" src="<%=result.posts[i].url_image%>">
+				</div>
+				<div class="flex flex-col ml-2">
+				<a class="hover-red text-3xl" href="/post/<%=result.posts[i].id_posts%>/"><%=result.posts[i].title%></a> 
+				<p class="text-2xl"> Author: <%=result.posts[i].id_user%></p>
+				</div>	
 			</div>
 			<br>
 
 			
 		<% } %>
-	</section>
+	</div>
 	</div>
 	
 
