--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -32,7 +32,7 @@
       <a href="/home" class="text-xl hover-red duration-1000">Home</a>
     </li>
     <li class="mx-4 my-6 md:my-0 md:mx-0">
-      <a href="/forum" class="text-xl hover-red duration-1000">Forum</a>
+      <a href="/forum/noFilter/1" class="text-xl hover-red duration-1000">Forum</a>
     </li>
     <li class="mx-4 my-6 md:my-0 md:mx-0">
       <a href="/about" class="text-xl hover-red duration-1000">About</a>
