--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,9 +15,8 @@
   <%- include('./nav.ejs') %>
   <div class="container-body relative z-10 flex flex-col">
 
-    <div class="">
-      <img class="" src="/images/book-home.png">
-      <h1 class="text-9xl">Book Lovers</h1>
+    <div class="w-full">
+      <img src="/images/book-home.png">
     </div>
 
     <div class="fondo-black flex flex-col w-full justify-center items-center my-2">
