--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,10 @@ body{
 	background-color: #F2F3E2;
 }
 
+.hover-white2:hover{
+	color: #F2F3E2;
+}
+
 /*ESTILOS DEL NAV*/
 
 /*ESTILOS DEL LOGIN*/
