--- a/views/post.ejs
+++ b/views/post.ejs
@@ -45,7 +45,7 @@
 					<input type="hidden" name="id_user" id="id_user" value="<%=result.session.id_users%>">
 
 					<div class="flex flex-row items-center justify-between mt-1">
-						<input type="submit" name="Enviar" value="Answer" class="cursor-pointer rounded fondo-red px-2 w-fit">
+						<input type="submit" name="Enviar" value="Answer" class="cursor-pointer rounded fondo-red px-2 w-fit hover-white hover-red transition duration-700">
 						<p class="texto-white text-end"><i>0/500</i></p>
 					</div>
 				</div>
