--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
   <%- include('./nav.ejs') %>
-  <div class="container-body relative z-10 flex flex-col">
+  <div class="container-body relative z-10 flex flex-col items-center">
 
     <div class="w-full">
       <img src="/images/book-home.png">
@@ -24,10 +24,21 @@
       <p class="texto-white">Introduccion al sitio content</p> 
     </div>
     <div>
-      Titulo de Recomendaciones
+      Hottie hot
     </div>
-    <div>
-      Recomendaciones de posts populares
+    <div class="flex flex-row fondo-black rounded my-4 px-4 w-4/5 texto-red justify-between items-center">
+      <div class="flex flex-col text-center text-4xl">
+        <i class="fa-solid fa-chevron-left"></i>
+      </div>
+      <div class="flex flex-row w-10/12 ">
+        <div class="flex flex-col  text-center py-4 w-1/5">
+          <img class="w-32 h-32 rounded" src="/images/accion.jpg" alt="">
+          <p class="w-32">Ñame: The Curious Incident of the Dog in the Night-Time</p>
+        </div>
+      </div>
+      <div class="flex flex-col text-center text-4xl">
+        <i class="fa-solid fa-chevron-right"></i>
+      </div>
     </div>
     <div>
       Recomendaciones de Posts nuevos
