--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,23 +24,22 @@
       <p class="texto-white">Introduccion al sitio titulo</p>
       <p class="texto-white">Introduccion al sitio content</p> 
     </div>
-    <div class="panelHot">
+    <div class="">
       Hottie hot
     </div>
-    <div class="flex flex-row fondo-black rounded my-4 px-4 w-4/5 texto-red justify-between items-center">
-      <div class="flex flex-col text-center text-4xl">
-        <i class="fa-solid fa-chevron-left arrowLeftHot"></i>
+    <div class="flex flex-row fondo-black rounded my-4 p-4 w-4/5 h-64 texto-red justify-between items-center">
+      <div class="flex flex-col text-center text-4xl w-1/12">
+        <i class="fa-solid fa-chevron-left arrowLeftHot cursor-pointer w-fit"></i>
       </div>
-      <div class="flex flex-row w-10/12 overflow-hidden">
-        <% for (var i = 0 ; i < result.post.length; i++) { %>
-          <div class="flex flex-col  text-center py-4 w-1/5 mr-3 panelHot relative">
-            <img class="w-32 h-32 rounded" src="<%=result.post[i].url_image%>" alt="">
-            <p class="w-32"><%=result.post[i].title%></p>
+      <div class="flex flex-row flex-nowrap overflow-hidden">
+        <% for (var i = 0 ; i < 10; i++) { %>
+          <div class="panelHot relative">
+            <img class="rounded w-32 h-full mr-4" src="<%=result.post[i].url_image%>" alt="">
           </div>
         <% } %>
       </div>
-      <div class="flex flex-col text-center text-4xl">
-        <i class="fa-solid fa-chevron-right arrowRightHot"></i>
+      <div class="flex flex-col text-center text-4xl w-1/12">
+        <i class="fa-solid fa-chevron-right arrowRightHot cursor-pointer w-fit"></i>
       </div>
     </div>
     <div>
