--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,14 +20,12 @@
       <img src="/images/book-home.png">
     </div>
 
-    <div class="fondo-black flex flex-col w-full justify-center items-center my-2">
-      <p class="texto-white">Introduccion al sitio titulo</p>
-      <p class="texto-white">Introduccion al sitio content</p> 
+
+    <div class="flex flex-col texto-red fondo-black w-1/5 rounded p-2 text-3xl text-center">
+      <i class="texto-white fa-solid fa-fire"></i>
+      <p><b>Hottie Hots</b></p>
     </div>
-    <div class="texto-red text-3xl">
-      <b>Hottie Hots</b>
-    </div>
-    <div class="flex flex-row fondo-black rounded my-4 p-4 w-4/5 h-64 texto-red justify-between items-center">
+    <div class="flex flex-row fondo-black rounded mb-4 p-4 w-4/5 h-64 texto-red justify-between items-center">
       <div class="flex flex-col text-center text-4xl w-1/12">
         <i class="fa-solid fa-chevron-left arrowLeftHot cursor-pointer w-fit"></i>
       </div>
@@ -42,10 +40,16 @@
         <i class="fa-solid fa-chevron-right arrowRightHot cursor-pointer w-fit"></i>
       </div>
     </div>
-    <div class="texto-red text-3xl">
-      <b>The Newcomers</b>
+
+    <div class="rounded-md border-y-4 borde-red p-10 w-4/5 text-center my-8">
+      <a class=" texto-white hover-red duration-1000 text-6xl" href="/forum/noFilter/1"><i>Get started right now!</i></a>
     </div>
-    <div class="flex flex-row fondo-black rounded my-4 p-4 w-4/5 h-64 texto-red justify-between items-center">
+
+    <div class="texto-red text-3xl fondo-black w-1/5 rounded p-2 mt-4 text-center">
+      <i class="texto-white fa-solid fa-pen-fancy"></i>
+      <p><b>The Newcomers</b></p>
+    </div>
+    <div class="flex flex-row fondo-black rounded mb-4 p-4 w-4/5 h-64 texto-red justify-between items-center">
       <div class="flex flex-col text-center text-4xl w-1/12">
         <i class="fa-solid fa-chevron-left arrowLeftHot cursor-pointer w-fit"></i>
       </div>
