--- a/views/about.ejs
+++ b/views/about.ejs
@@ -17,7 +17,7 @@
     <div class="p-5 m-5 text-center w-1/3 rounded-md border-y-4 borde-red">
       <p class="text-4xl texto-white ">About us</p>
     </div>
-    <div class="p-6 m-6 rounded-md fondo-white texto-grey text-center">
+    <div class="p-6 my-6 w-4/5 rounded-md fondo-white texto-grey text-center">
       <p class="text-2xl p-5">A warm welcome to our visitors and thank you for the time taken to reach this page!</p>
       <p class="p-5">We are ThunderBit, a small team of Computer Engineers. 
                       This page was made as a sample, to experiment and showcase our skills. 
