--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -49,18 +49,18 @@
 		<%if (result.session.username == "") { %>
 			<p class="pb-0 px-3 fondo-red texto-gray rounded-t "><b>Sign in to create a new discussion...</b></p>
 			<% }else{ %>
-				<i class="text-4xl texto-red mb-4 fa-solid fa-square-plus cursor-pointer hover-white2 transition duration-700"></i>
+				<a href="/addPost"><i class="text-4xl texto-red mb-4 fa-solid fa-square-plus cursor-pointer hover-white2 transition duration-700"></i></a>
 				<%}%>
 
 	</div>
 
-	<section class="flex flex-col"> 
+	<section class="flex flex-col "> 
 		<% var color = 0;
 		for (var i = 0 ; i < result.post.length; i++) { %>
-			<div class="flex flex-row w-full border-t-2
+			<div class="flex flex-row w-full border-t-4
 			<%if(color == 0){color = 1; %>fondo-black<% }
 			else{color = 0; %>fondo-gray<% }%>
-			 borde-red my-0 pl-10">
+			 borde-red my-0 pl-10 py-2">
 				<div class="flex justify-center items-center w-32">
 					<img src="<%=result.post[i].url_image%>" class="rounded  w-32 h-32">
 				</div>
@@ -73,12 +73,12 @@
 							<p><b><%=result.post[i].genre%></b></p>
 						</div>
 						<div class="texto-white">
-							<p><b>Review Author: </b><%=result.post[i].username%></p>
+							<p><b>Poster: </b><%=result.post[i].username%></p>
 						</div>
 					</div>
 					<div class="texto-white flex flex-col h-full justify-around pl-4 mb-2 md:w-1/3">
 						<div>
-							<p><b>Number of Words: </b><%=result.post[i].number_words%></p>	
+							<p><b>Words: </b><%=result.post[i].number_words%></p>	
 						</div>
 						<div>
 							<p><b>Replies: </b><%= result.post[i].replies %></p>
@@ -92,7 +92,7 @@
 					</div>
 					<div class="texto-white flex flex-col w-full md:w-1/3 h-full justify-evenly pl-4 mb-2">
 						<div class="">
-							<p><b>Preview: </b><i>"..<%=result.post[i].content_post%>.."</i></p>
+							<p><i>"..<%=result.post[i].content_post%>.."</i></p>
 						</div>
 					</div>
 				</div>
