--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -14,9 +14,9 @@
 </head>
 <body>
     <%- include('./nav.ejs') %>
-    <div class="flex flex-col justify-center align-middle text-center w-full items-center">
+    <div class="flex flex-col justify-center align-middle text-center w-full items-center p-3">
         <!--formulario de agregar posts-->
-		<form action="/create_post" method="post" id="create_post" class="w-4/5 my-4 fondo-black rounded texto-white">
+		<form action="/create_post" method="post" id="create_post" class="w-full my-4 fondo-black rounded texto-white">
             <div class="flex flex-col text-center items-start w-full p-4">
 
                 <p class="texto-red text-2xl borde-red border-2 rounded w-full py-1">Add a New Review!</p>
