--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -73,7 +73,7 @@
 							<p><b><%=result.post[i].genre%></b></p>
 						</div>
 						<div class="texto-white">
-							<p><b>Poster: </b><%=result.post[i].username%></p>
+							<p><b>Poster: </b><a href="/user/<%=post[i].id_user%>"><%=result.post[i].username%></a></p>
 						</div>
 					</div>
 					<div class="texto-white flex flex-col h-full justify-around pl-4 mb-2 md:w-1/3">
