--- a/views/user.ejs
+++ b/views/user.ejs
@@ -21,19 +21,28 @@
     <!--Info session-->
     <div class="flex flex-col w-full pl-10 pt-4">
       <div class="flex flex-col md:flex-row w-full">
-        <div class="flex flex-col w-1/3 texto-white">
-          <div class="w-32 md:w-56 border-4 borde-black rounded">
-            <img class="rounded" src="/images/user_default.jpg">
-          </div>
-          <div class="pl-5 pt-2">
-            <p>Username: <%= result.user.username == "" ? "none" : result.user.username %></p>
-            <p>User since: <%= result.user.join_date == "" ? "none" : result.user.join_date %> </p>
-            <a class="pl-0 w-fit" href="/signOut">Logout</a>
+        <div class="flex flex-col w-1/2 md:w-1/3 texto-white mx-8">
+          <div class="fondo-black rounded p-3">
+            <div class="w-32 md:w-56 border-4 borde-white rounded">
+              <img class="rounded" src="/images/user_default.jpg">
+            </div>
+            <div class="pl-5 pt-2">
+              <p class="texto-red">Username:</p><p class="text-xl"> <%= result.user.username == "" ? "none" : result.user.username %></p>
+              <p class="texto-red">User since: </p><p class="text-xl pb-5"><%= result.user.join_date == "" ? "none" : result.user.join_date %> </p>
+            </div>
           </div>
         </div>
         
-        <div class="flex w-2/3">
-          <p>Flying ñames</p>
+        <div class="flex flex-col w-2/3 texto-white">
+          <div class="w-fit">
+            <p class="text-3xl texto-red fondo-black rounded-t w-fit p-3">Posts: <%= result.posts.length %></p>
+            <div class="flex flex-col fondo-black rounded-b rounded-r p-3 text-xl">
+              <%for (var i = 0 ; i < result.posts.length; i++) { %>
+                <a class="w-fit pt-1 hover-red duration-1000" href="/post/<%=result.posts[i].id_posts%>/"><%= result.posts[i].title %></a>
+              <% } %>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
