--- a/views/user.ejs
+++ b/views/user.ejs
@@ -21,10 +21,10 @@
     <!--Info session-->
     <div class="flex flex-col w-full px-10 pt-4">
       <div class="flex flex-col md:flex-row w-full">
-        <div class="flex flex-col w-4/5 md:w-1/3 texto-white mx-8">
+        <div class="flex flex-col w-4/5 md:w-1/3 texto-white mx-8 mt-8">
           <div class="fondo-black rounded p-5 w-fit">
             <div class="w-32 md:w-40 lg:w-56 border-4 borde-white rounded">
-              <img class="rounded" src="/images/user_default.jpg">
+              <img src="/images/user_default.jpg">
             </div>
             <div class="pl-5 pt-2">
               <p class="texto-red">Username:</p><p class="text-xl"> <%= result.user.username == "" ? "none" : result.user.username %></p>
@@ -36,10 +36,12 @@
         <div class="flex flex-col w-4/5 md:w-1/3 texto-white m-8">
           <div class="w-fit">
             <p class="text-3xl texto-red fondo-black rounded-t w-fit p-10">Posts: <%= result.posts.length %></p>
-            <div class="flex flex-col fondo-black rounded-b rounded-r p-10 text-xl">
-              <%for (var i = 0 ; i < result.posts.length; i++) { %>
-                <a class="w-fit md:w-full pt-1 hover-red duration-1000" href="/post/<%=result.posts[i].id_posts%>/"><%= result.posts[i].title %></a>
-              <% } %>
+            <div class="fondo-black rounded-b rounded-r p-10 text-xl">
+              <ul class="flex flex-col">
+                <%for (var i = 0 ; i < result.posts.length; i++) { %>
+                  <li class="inline-flex"><i class="fa-solid fa-book texto-red pt-3"></i><a class="w-fit pt-2 hover-red duration-1000" href="/post/<%=result.posts[i].id_posts%>/"><%= result.posts[i].title %></a></li>
+                <% } %>
+            </ul>
             </div>
           </div>
 
