--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,7 +32,7 @@
       <div class="flex flex-row flex-nowrap overflow-hidden">
         <% for (var i = 0 ; i < 10; i++) { %>
           <div class="panelHot relative">
-            <img class="rounded w-32 h-full mr-4" src="<%=result.post[i].url_image%>" alt="">
+            <img class="rounded w-32 h-full mr-4" src="<%=result.postHot[i].url_image%>" alt="">
           </div>
         <% } %>
       </div>
@@ -51,17 +51,17 @@
     </div>
     <div class="flex flex-row fondo-black rounded mb-4 p-4 w-4/5 h-64 texto-red justify-between items-center">
       <div class="flex flex-col text-center text-4xl w-1/12">
-        <i class="fa-solid fa-chevron-left arrowLeftHot cursor-pointer w-fit"></i>
+        <i class="fa-solid fa-chevron-left arrowLeftNew cursor-pointer w-fit"></i>
       </div>
       <div class="flex flex-row flex-nowrap overflow-hidden">
         <% for (var i = 0 ; i < 10; i++) { %>
-          <div class="panelHot relative">
-            <img class="rounded w-32 h-full mr-4" src="<%=result.post[i].url_image%>" alt="">
+          <div class="panelNew relative">
+            <img class="rounded w-32 h-full mr-4" src="<%=result.postNew[i].url_image%>" alt="">
           </div>
         <% } %>
       </div>
       <div class="flex flex-col text-center text-4xl w-1/12">
-        <i class="fa-solid fa-chevron-right arrowRightHot cursor-pointer w-fit"></i>
+        <i class="fa-solid fa-chevron-right arrowRightNew cursor-pointer w-fit"></i>
       </div>
     </div>
   </div>
