--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,12 +16,12 @@
   <%- include('./nav.ejs') %>
   <div class="container-body relative z-10 flex flex-col items-center">
 
-    <div class="w-full">
+    <div class="w-full mb-3 md:m-auto">
       <img src="/images/book-home.png">
     </div>
 
 
-    <div class="flex flex-col texto-red fondo-black w-1/5 rounded p-2 text-3xl text-center">
+    <div class="flex flex-col texto-red fondo-black rounded p-2 w-1/3 md:w-1/3 text-lg sm:text-3xl text-center">
       <i class="texto-white fa-solid fa-fire"></i>
       <p><b>Hottie Hots</b></p>
     </div>
@@ -32,20 +32,20 @@
       <div class="flex flex-row flex-nowrap overflow-hidden">
         <% for (var i = 0 ; i < 10; i++) { %>
           <div class="panelHot relative">
-            <img class="rounded w-32 h-full mr-4" src="<%=result.postHot[i].url_image%>" alt="">
+            <a class="p-0" href="/post/<%=result.postHot[i].id_posts%>/"><img class="rounded w-32 h-full mr-4" src="<%=result.postHot[i].url_image%>" alt=""></a>
           </div>
         <% } %>
       </div>
-      <div class="flex flex-col text-center text-4xl w-1/12">
+      <div class="flex flex-col text-center items-end text-4xl w-1/12">
         <i class="fa-solid fa-chevron-right arrowRightHot cursor-pointer w-fit"></i>
       </div>
     </div>
 
     <div class="rounded-md border-y-4 borde-red p-10 w-4/5 text-center my-8">
-      <a class=" texto-white hover-red duration-1000 text-6xl" href="/forum/noFilter/1"><i>Get started right now!</i></a>
+      <a class=" texto-white hover-red duration-1000 text-4xl md:text-6xl" href="/forum/noFilter/1"><i>Get started right now!</i></a>
     </div>
 
-    <div class="texto-red text-3xl fondo-black w-1/5 rounded p-2 mt-4 text-center">
+    <div class="texto-red fondo-black rounded p-2 mt-4 w-1/3 md:w-1/3 text-lg sm:text-3xl text-center">
       <i class="texto-white fa-solid fa-pen-fancy"></i>
       <p><b>The Newcomers</b></p>
     </div>
@@ -56,11 +56,11 @@
       <div class="flex flex-row flex-nowrap overflow-hidden">
         <% for (var i = 0 ; i < 10; i++) { %>
           <div class="panelNew relative">
-            <img class="rounded w-32 h-full mr-4" src="<%=result.postNew[i].url_image%>" alt="">
+            <a class="p-0" href="/post/<%=result.postNew[i].id_posts%>/"><img class="rounded w-32 h-full mr-4" src="<%=result.postNew[i].url_image%>" alt=""></a>
           </div>
         <% } %>
       </div>
-      <div class="flex flex-col text-center text-4xl w-1/12">
+      <div class="flex flex-col text-center items-end text-4xl w-1/12">
         <i class="fa-solid fa-chevron-right arrowRightNew cursor-pointer w-fit"></i>
       </div>
     </div>
